fix modal on small devices

--- a/src/main/scss/fdz-theme/common/various.scss
+++ b/src/main/scss/fdz-theme/common/various.scss
@@ -99,3 +99,7 @@ project-status-badge > span, release-status-badge > span {
 .fdz-project-status-overview-metadata-status-table-cell {
   min-height: 28px;
 }
+
+.fdz-theme md-dialog {
+  padding: 0 8px;
+}
