--- a/src/main/webapp/assets/styles/fdz.css
+++ b/src/main/webapp/assets/styles/fdz.css
@@ -2517,3 +2517,6 @@ project-status-badge > span, release-status-badge > span {
 
 .fdz-project-status-overview-metadata-status-table-cell {
   min-height: 28px; }
+
+.fdz-theme md-dialog {
+  padding: 0 8px; }
